# bank_customer_outflow

./: Bank customer outflow.ipynb  README.md  bank_check.py  pyproject.toml
bank_check/scripts/: bank_check.py  pig_first_try.py
