[tool.poetry]
name = "bank"
version = "0.1.0"
description = ""
authors = ["g_somne", "pan-keke"]
packages = [
{include = "bank_check"},
]

[tool.poetry.scripts]
bank-check = "bank_check.scripts.bank_check:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
